tests/mm0_mmu/fail/bad-sort31.mmu
-- provable should be after pure
(sort s31 provable pure)